--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ body{
     margin: 0px auto;
     width: 150px;
     height: 150px;
-    background-image: url('profile.png');
+    background-image: url('../img/profile.png');
     background-size: cover;
     border-radius: 50%;
     border: 0.5rem solid rgb(0, 112, 243);
@@ -119,6 +119,13 @@ body{
     margin-top: -5%;
 }
 
+.cards.second{
+    display: flex;
+    justify-content: center;
+    margin-top: -5%;
+}
+
+
 .card-generic
 {   
     margin-right: 2rem;
@@ -143,14 +150,59 @@ body{
     padding-bottom: 6px;
     margin-bottom: 2rem;
 }
-.card-generic > img
+.card-generic > .modal-container > img
 {
     width:100%;
     height:100%;
     object-fit: cover;
 }
 
-@media screen and (max-width: 1440px) {
+
+/* .modal-container{
+    display: inline-block;
+    position: relative;
+} */
+
+.modal-container.active{
+    position: fixed;
+    /* width: 100%;
+    height: 100%; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 20vh;
+    left: 10%;
+}
+
+.modal-container.active img{
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+}
+
+.modal-container.active::after{
+    content: '';
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background-color: rgba(0,0,0,0.65);
+    z-index: 0;
+}
+
+
+
+
+@media screen and (min-width: 1024px) and (max-width: 1439px){
+    .modal-container.active{
+        left: 17%;
+    }
+    
+}
+
+
+@media screen and (min-width: 1440px) and (max-width: 2000px){
     .cards
     {
         margin-top: -5%;
@@ -158,8 +210,15 @@ body{
     .resume{
         padding-bottom: 15%;
     }
+    .cards.second{
+        margin-top: 5%;
+    }
+    .modal-container.active{
+        left: 22%;
+    }
+    
 }
-@media screen and (max-width: 2560px) {
+@media screen and (min-width: 2001px) and (max-width: 2560px) {
     .cards
     {
         margin-top: -2%;
@@ -167,6 +226,14 @@ body{
     .resume{
         padding-bottom: 5%;
     }
+    .cards.second{
+        margin-top: 1.5%;
+    }
+
+    .modal-container.active{
+        left: 35%;
+    }
+
 
 }
 
